[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = 'async_task'
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    'flask',
    'pymongo'
]

[[project.authors]]
name = 'Zhangzelong'
email = 'zelong.zhang@moojing.com'

[project.optional-dependencies]
dev = [
    'requests'
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"