[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools', 'build']

[project]
name = 'async_task'
version = '0.0.2'
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    'flask',
    'pymongo'
]

[[project.authors]]
name = 'Zhangzelong'
email = 'zelong.zhang@moojing.com'

[project.optional-dependencies]
dev = [
    'requests'
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
